cmake_minimum_required(VERSION 3.22)
project(Leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode main.cpp global.h DynamicProgramming.h ByteDance.h pro1605.h Solution.h Tencent.h Pro1641.h Pro40.h Pro1637.h Pro3.h pro2357.h Pro4.h Pro5.h Pro6.h Pro7.h TencentMusic.h p1043.h Pro8.h pro9.h Pro1163.h Pro1727.h Pro10.h pro11.h pro12.h Pro28.h pro1673.h pro1156.h)
