cmake_minimum_required(VERSION 3.22)
project(Leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Leetcode main.cpp global.h DynamicProgramming.h ByteDance.h pro1605.h Solution.h Tencent.h Pro1641.h Pro40.h Pro1637.h Pro3.h pro2357.h Pro4.h Pro5.h Pro6.h Pro7.h TencentMusic.h p1043.h Pro8.h pro9.h Pro1163.h Pro1727.h Pro10.h pro11.h pro12.h Pro28.h pro1673.h pro1156.h OppoPro.h
        Pro1993.h
        Pro652.h
        Pro122.h
        Pro123.h
        Pro2562.h
        Pro1402.h
        Pro70.h
        Pro72.h
        Pro2678.h
        Pro1944.h
        Pro447.h
        pro2707.h
        Pro82.h
        Pro2719.h
        Pro2171.h
        Pro2809.h
        Pro670.h
        pro2765.h
        p2865.h
        Pro2846.h
        pro1696.h
        Pro724.h
)
